some changes new

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,3 @@
-
-<!-- <div id="header">	
-	<div class="container">
-		<span class="logo-text"><b><i>ABC Restaurant</i></b></span>
-		<ul id="site-nav">
-			<li><a routerLink="/" routerLinkActive="active"><b>HOME</b></a></li>
-			<li><a routerLink="/food" routerLinkActive="active"><b>FOOD</b></a></li>
-			<li><a routerLink="/drinks" routerLinkActive="active"><b>DRINKS</b></a></li>
-			<li><a routerLink="/offers" routerLinkActive="active"><b>OFFERS</b></a></li>
-			<li><a routerLink="/contactus" routerLinkActive="active"><b>CONTACT US</b></a></li>
-		</ul>
-	</div>
-</div> -->
-
-
+<app-header></app-header>
 
 <router-outlet></router-outlet>
