--- a/src/app/offers/offers.component.html
+++ b/src/app/offers/offers.component.html
@@ -1,36 +1,33 @@
 <!-- <app-header></app-header>  -->
 
-<div class="slideshow-container">
-	
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <img src="/assets/mgg-vitchakorn-98Xi5vMGKck-unsplash.jpg" style="width:100%">
-        <div class="text">Buy a full meal, get the 2nd one 50%</div>
-    </div>
+<h2 class="offer-header">DEALS OF THE DAY!</h2>
 
-    <div class="mySlides fadeBuy a full meal, get the 2nd one 50%">
-        <div class="numbertext">2 / 3</div>
-        <img src="/assets/mgg-vitchakorn-98Xi5vMGKck-unsplash.jpg" style="width:100%">
-        <div class="text">Buy a full meal, get the 2nd one 50%</div>
-    </div>
-
-    <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img src="/assets/mgg-vitchakorn-98Xi5vMGKck-unsplash.jpg" style="width:100%">
-        <div class="text">Buy a full meal, get the 2nd one 50%</div>
-    </div>
+<div class="row justify-content-around">
     
+    <div class="card">
+    <img src="/assets/images/pizza.jpg" alt="...">
+    <div class="card-body">
+      <h3 class="card-title">Pizza</h3>
+      <p class="card-text">BUY 1 GET 1 FREE</p>
+      <button type="button" class="btn btn-primary">$15</button>
+    </div>
+  </div>
 
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
+  <div class="card">
+    <img src="/assets/images/food-photographer-david-fedulov-FtpgFeUQuAY-unsplash.jpg" alt="...">
+    <div class="card-body">
+      <h3 class="card-title">Seafood</h3>
+      <p class="card-text">-10% ONLY TODAY!</p>
+      <button type="button" class="btn btn-primary">$30</button>
+    </div>
+  </div>
 
-<!-- The dots/circles -->
-<div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
+  <div class="card">
+    <img src="/assets/images/salad.jpg" alt="...">
+    <div class="card-body">
+      <h3 class="card-title">Salad</h3>
+      <p class="card-text">GET 50+ POINTS ON THIS ORDER</p>
+      <button type="button" class="btn btn-primary">$20</button>
+    </div>
+  </div>
 </div>
