--- a/src/styles.css
+++ b/src/styles.css
@@ -134,7 +134,7 @@ body {
     
 }
 
-/* Slideshow container */
+Slideshow container
 .slideshow-container {
   max-width: 1000px;
   position: relative;
