--- a/src/app/beverage/beverage.component.html
+++ b/src/app/beverage/beverage.component.html
@@ -1,34 +1,48 @@
+ <div class="row justify-content-around">
+    
+  <div class="card" *ngFor="let BeverageItem of beverage_items">
+    <img src="/assets/images/coffee.jpg" alt="...">
+    <div class="card-body">
+      <h3 class="card-title"> {{ BeverageItem.beverage_name }}</h3>
+      <p class="card-text">{{ BeverageItem.description }}</p>
+      <button type="button" class="btn btn-primary">${{ BeverageItem.price }}</button>
+    </div>
+  </div>
+</div> 
 
-<div class="row">
-  <div class="card" style="width: 30%;">
-    <img src="/assets/images/coffee.jpg" class="card-img-top" alt="...">
+
+
+<div class="row justify-content-around">
+  <div class="card">
+    <img src="/assets/images/coffee.jpg" alt="...">
       <div class="card-body">
         <h3 class="card-title">Coffee</h3>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <button type="button" class="btn btn-primary">$5</button>
       </div>
   </div>
-  <div class="card" style="width: 30%;">
-    <img src="/assets/images/tea.jpg" class="card-img-top" alt="...">
+  
+  <div class="card">
+    <img src="/assets/images/tea.jpg" alt="...">
       <div class="card-body">
         <h3 class="card-title">Tea</h3>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <button type="button" class="btn btn-primary">$5</button>
       </div>
     </div>
-  <div class="card" style="width: 30%;">
-    <img src="/assets/images/fresh.jpg" class="card-img-top" alt="...">
+  <div class="card">
+    <img src="/assets/images/fresh.jpg" alt="...">
       <div class="card-body">
         <h3 class="card-title">Fresh</h3>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <button type="button" class="btn btn-primary">$6</button>
       </div>
-    </div>
+  </div>
 </div>
 
 <div class="row2">
   <div class="card" style="width: 30%;">
-    <img src="/assets/images/smoothie.jpg" class="card-img-top" alt="...">
+    <img src="/assets/images/smoothie.jpg" alt="...">
     <div class="card-body">
       <h3 class="card-title">Smoothie</h3>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -36,7 +50,7 @@
     </div>
   </div>
   <div class="card" style="width: 30%;">
-    <img src="/assets/images/coctail.jpg" class="card-img-top" alt="...">
+    <img src="/assets/images/coctail.jpg" alt="...">
     <div class="card-body">
       <h3 class="card-title">Coctails</h3>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -44,7 +58,7 @@
     </div>
   </div>
   <div class="card" style="width: 30%;">
-    <img src="/assets/images/coffee.jpg" class="card-img-top" alt="...">
+    <img src="/assets/images/coffee.jpg" alt="...">
     <div class="card-body">
       <h3 class="card-title">Matcha</h3>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
