--- a/src/app/beverage/beverage.component.html
+++ b/src/app/beverage/beverage.component.html
@@ -1,4 +1,4 @@
- <div class="row justify-content-around">
+ <!-- <div class="row justify-content-around">
     
   <div class="card" *ngFor="let BeverageItem of beverage_items">
     <img src="/assets/images/coffee.jpg" alt="...">
@@ -8,7 +8,7 @@
       <button type="button" class="btn btn-primary">${{ BeverageItem.price }}</button>
     </div>
   </div>
-</div> 
+</div>  -->
 
 
 
