--- a/src/app/food/food.component.html
+++ b/src/app/food/food.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-around">
+<!-- <div class="row justify-content-around">
     
     <div class="card" *ngFor="let FoodItem of food_items">
     <img src="/assets/images/pizza.jpg" alt="...">
@@ -8,7 +8,7 @@
       <button type="button" class="btn btn-primary">${{ FoodItem.price }}</button>
     </div>
   </div>
-</div> 
+</div>  -->
 
 
 
